# ros_msft_onnx

./: #onnx.repos#
onnxruntime_vendor/: CMakeLists.txt
onnxruntime_vendor/src/: onnxruntime_vendor-extras.cmake
